# java-test-jni

app/: CMakeLists.txt  build.gradle  tao_file_make.sh
app/arm64-v8agenerated/ninja/project/debug/arm64-v8a-DANDROID_ABI=arm64-v8a/: CMakeCache.txt  build.ninja  cmake_install.cmake
app/src/main/cpp/: base64.cpp  base64.h  crypter.cpp  crypter.h  security.cpp  security.h
app/src/main/java/com/example/myapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
